tests/examples/snapshots/fail/sorts/arg_count_mismatch.fly.cvc5.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/arg_count_mismatch.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: could not unify 1 args and 2 args
  ┌─ tests/examples/fail/sorts/arg_count_mismatch.fly:7:1
  │
7 │ assert forall x:s. r(x, false)
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


